--- a/package.json
+++ b/package.json
@@ -1,22 +1,62 @@
 {
   "name": "code-editor",
   "version": "1.0.0",
-  "description": "",
+  "description": "A lightweight cross-platform IDE built with Electron",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "electron . --debug"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "electron": "^35.0.2"
+    "electron": "^27.0.0",
+    "electron-builder": "^24.6.3"
   },
   "dependencies": {
-    "@xterm/xterm": "^5.5.0",
-    "electron-builder": "^25.1.8",
-    "electron-reload": "^2.0.0-alpha.1"
+    "monaco-editor": "^0.43.0",
+    "node-pty": "^1.0.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.7.0",
+    "xterm-addon-search": "^0.11.0",
+    "xterm-addon-web-links": "^0.8.0",
+    "chokidar": "^3.5.3",
+    "electron-store": "^8.1.0",
+    "simple-git": "^3.20.0"
+  },
+  "build": {
+    "appId": "com.code-editor.app",
+    "productName": "Code Editor",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*",
+      "!**/*.{o,hprof,orig,pyc,pyo,rbc}",
+      "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/node_modules/*.d.ts",
+      "!**/node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,__pycache__,thumbs.db,.gitignore,.gitattributes,.flowconfig,.yarn-metadata.json,.idea,appveyor.yml,.travis.yml,circle.yml,npm-debug.log,.nyc_output,yarn.lock,.yarn-integrity}"
+    ],
+    "mac": {
+      "category": "public.app-category.developer-tools"
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "category": "Development"
+    }
   }
 }
